--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,11 @@ name = "pypi"
 [dev-packages]
 
 [packages]
+google-cloud-storage = "*"
+google-cloud-datastore = "*"
+pillow = "*"
+google-cloud-vision = "*"
+google-cloud = "*"
 
 [requires]
-python_version = "2.7"
+python_version = "3.5"
