--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.json
+test*.png
 
 # Created by https://www.gitignore.io/api/linux,python,pycharm,windows,jupyternotebook
 # Edit at https://www.gitignore.io/?templates=linux,python,pycharm,windows,jupyternotebook
