--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.json
 test*.png
+following*.png
 
 # Created by https://www.gitignore.io/api/linux,python,pycharm,windows,jupyternotebook
 # Edit at https://www.gitignore.io/?templates=linux,python,pycharm,windows,jupyternotebook
